--- a/Views/Admin/_PartialTopLeftNavBar.cshtml
+++ b/Views/Admin/_PartialTopLeftNavBar.cshtml
@@ -240,11 +240,17 @@
                     <li class='@TempData["POApproved"]'>
                         <a href='@Url.Action("POApproved", "Admin")'><i class="fa fa-code-fork"></i> Approved PO</a>
                     </li>
-                    @*<li class='@TempData["RequestPayment"]'>
+                    <li class='@TempData["RequestPayment"]'>
                         <a href='@Url.Action("RequestPayment", "Admin")'><i class="fa fa-code-fork"></i> Request  for Payment</a>
+                    </li>
+                    <li class='@TempData["PRApproval"]'>
+                        <a href='@Url.Action("PRApproval", "Admin")'><i class="fa fa-code-fork"></i> Payment Req for Approval </a>
                     </li>
                     <li class='@TempData["PaymentProcessing"]'>
                         <a href='@Url.Action("PaymentProcessing", "Admin")'><i class="fa fa-code-fork"></i>  Payment Processing</a>
+                    </li>
+                    @*<li class='@TempData["MaterialPickup"]'>
+                        <a href='@Url.Action("MaterialPickup", "Admin")'><i class="fa fa-code-fork"></i>  Material Pickup</a>
                     </li>*@
                 </ul>
             </li>
