--- a/Content/custom/main.css
+++ b/Content/custom/main.css
@@ -833,3 +833,7 @@ td.isrcbtn button {
 .table td .form-control {
     font-size: 12px !important;
 }
+
+.table {
+    font-size: 12px !important;
+}
