--- a/Views/Admin/MaterialPickup.cshtml
+++ b/Views/Admin/MaterialPickup.cshtml
@@ -1,9 +1,9 @@
 ﻿@using Vendor_Indusuno.Extensions
-@model Vendor_Indusuno.ViewModels.PurchaseOrdersViewModel
+@model Vendor_Indusuno.ViewModels.MaterialPickupViewModel
 @{
-    ViewBag.Title = "Purchase Orders";
+    ViewBag.Title = "Payment Processing";
     TempData["Purchase"] = "active";
-    TempData["PurchaseOrders"] = "active";
+    TempData["MaterialPickup"] = "active";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
@@ -24,18 +24,14 @@
 </section>
 <!-- Main content -->
 <section class="content">
-    @using (Html.BeginForm("PurchaseOrders", "Admin", FormMethod.Post, new { id = "form_advanced_validation", autocomplete = "off", enctype = "multipart/form-data" }))
+    @using (Html.BeginForm("MaterialPickup", "Admin", FormMethod.Post, new { id = "form_advanced_validation", autocomplete = "off", enctype = "multipart/form-data" }))
     {
-
         @Html.AntiForgeryToken()
         <!-- Main row -->
         <div class="row">
             <div class="col-lg-12">
                 <!-- Default box -->
                 <div class="box">
-                    <div class="box-header with-border">
-                        <h3 class="box-title">@Html.ActionLink("New Purchase Order", "PurchaseOrder", "Admin", null, new { @class = "btn btn-edt bg-aqua", title = "New Purchase Order" })</h3>
-                    </div>
                     <!-- /.box-body -->
                     <div class="box-body">
                         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
@@ -71,25 +67,36 @@
                                 })
                             </div>
                         </div>
-                        <table id="tblpurchaseorder" class="table table-bordered display">
+                        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                            <div class="form-group">
+                                @Html.LabelFor(m => m.Status, new { @class = "form-control-label" })
+                                @Html.DropDownListFor(m => m.Status,
+                               new List<SelectListItem>
+                                  {
+                                    new SelectListItem{ Text="Success", Value = "Success", Selected = true },
+                                    new SelectListItem{ Text="Pending", Value = "Pending" },
+                                  },
+                                "--Select Status--", new { @class = "form-control select2" })
+                                @Html.ValidationMessageFor(m => m.Status, "",
+                        new { @class = "text-danger" })
+                            </div>
+                        </div>
+                        <table id="tblMaterialPickup" class="table table-bordered display nowrap">
                             <thead>
                                 <tr>
                                     <th>SNo</th>
-                                    <th>Edit</th>
+                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().OrderDate)</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().CustomerName)</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().PONumber)</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().POId)</th>
-                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().POPId)</th>
-                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().Product)</th>
-                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().Brand)</th>
-                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().ModelNo)</th>
-                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().Quantity)</th>
-                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().Price)</th>
-                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().Discount)</th>
-                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().TotalPrice)</th>
-                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().GST)</th>
-                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().OrderDate)</th>
-                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().ExpDlvDate)</th>
+                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().VPONumber)</th>
+                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().VendorId)</th>
+                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().VendorPrice)</th>
+                                    @*<th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().GST)</th>
+                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().Margin)</th>
+                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().POAssignTo)</th>*@
+                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().Status)</th>
+                                    <th>View</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -97,30 +104,29 @@
                                 {
                                     <tr>
                                         <td></td>
+                                        <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.CustomerName)</td>
+                                        <td><a href='~/Content/upload/poupload/@item.POFile' target="_blank">@item.PONumber</a></td>
                                         <td>
-                                            @if (item.Status != "G" && item.Status != "AP")
+                                            @Html.EncodedActionLink(item.POId, "PODetails", "Admin", new { id = item.POId }, new { @class = "", title = "Edit", @target = "_blank" })
+
+                                        </td>
+                                        <td>
+                                            @Html.EncodedActionLink(item.VPONumber, "DownloadPO", "Admin", new { id = item.VPONumber }, new { @class = "", title = "Download", @target = "_blank" })
+                                        </td>
+                                        <td>@Html.DisplayFor(modelItem => item.VendorId)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.VendorPrice)</td>
+                                        @*<td>@Html.DisplayFor(modelItem => item.GST)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.Margin)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.POAssignTo)</td>*@
+                                        <td>@Html.DisplayFor(modelItem => item.Status)</td>
+                                        <td>
+                                            @if (Model.UserProfileModels.EmpType == "Administrator")
                                             {
-                                                @Html.EncodedActionLink("Edit", "EditPurchaseOrder", "Admin", new { id = item.Id }, new { @class = "", title = "Edit", @target = "_blank" })
+                                                @Html.EncodedActionLink("View", "POPayment", "Admin",
+                                                    new { id = item.VPONumber }, new { @class = "btn btn-edt bg-aqua btn-sm", @target = "_blank", title = "Payment" })
                                             }
                                         </td>
-                                        <td>@Html.DisplayFor(modelItem => item.CustomerName)</td>
-                                        <td>
-                                            <a href='~/Content/upload/poupload/@item.POFile' target="_blank">@item.PONumber</a>
-                                        </td>
-                                        <td>
-                                            <a href='~/Content/upload/poupload/@item.POFile' target="_blank">@item.POId</a>
-                                        </td>
-                                        <td>@Html.DisplayFor(modelItem => item.POPId)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.Product)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.Brand)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.ModelNo)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.Quantity)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.Price)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.Discount)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.TotalPrice)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.GST)%</td>
-                                        <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.ExpDlvDate)</td>
                                     </tr>
                                 }
                             </tbody>
