User wise Data Now use user to current database

--- a/Views/Admin/_PartialTopLeftNavBar.cshtml
+++ b/Views/Admin/_PartialTopLeftNavBar.cshtml
@@ -249,9 +249,9 @@
                     <li class='@TempData["PaymentProcessing"]'>
                         <a href='@Url.Action("PaymentProcessing", "Admin")'><i class="fa fa-code-fork"></i>  Payment Processing</a>
                     </li>
-                    @*<li class='@TempData["MaterialPickup"]'>
+                    <li class='@TempData["MaterialPickup"]'>
                         <a href='@Url.Action("MaterialPickup", "Admin")'><i class="fa fa-code-fork"></i>  Material Pickup</a>
-                    </li>*@
+                    </li>
                 </ul>
             </li>
             @*<li class='@TempData["Payments"]'>
