--- a/Views/Admin/MaterialReceive.cshtml
+++ b/Views/Admin/MaterialReceive.cshtml
@@ -33,12 +33,52 @@
             <div class="col-lg-12">
                 <!-- Default box -->
                 <div class="box">
-                    <!--<div class="box-header with-border">-->
-                    @*<h3 class="box-title">@Html.ActionLink("New Purchase Order", "PurchaseOrder", "Admin", null, new { @class = "btn btn-edt bg-aqua", title = "New Purchase Order" })</h3>*@
-                    <!--</div>-->
-                    <!-- /.box-body -->
+                    <div class="col-md-12">
+                        <div class="msgs">
+                            @if (ViewData?.ModelState[""]?.Errors?.Any() == true)
+                            {
+                                <div class="alert alert-danger alert-dismissible">
+                                    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+                                    <h4><i class="icon fa fa-ban"></i> Error!</h4>
+                                    @Html.ValidationSummary(true, "", new { @class = "" })
+                                </div>
+                            }
+                            @if (!String.IsNullOrEmpty(ViewBag.SucMsg))
+                            {
+                                <div class="alert alert-success alert-dismissible">
+                                    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+                                    <h4><i class="icon fa fa-check"></i> Success!</h4>
+                                    <strong>Well done!</strong> @ViewBag.SucMsg
+                                </div>
+                            }
+                            @if (!String.IsNullOrEmpty(ViewBag.ErrMsg))
+                            {
+                                <div class="alert alert-danger alert-dismissible">
+                                    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+                                    <h4><i class="icon fa fa-ban"></i> Error!</h4>
+                                    <strong>Oh snap!</strong> @ViewBag.ErrMsg
+                                </div>
+                            }
+                            @if (!String.IsNullOrEmpty(TempData["ErrMsg"] + ""))
+                            {
+                                <div class="alert alert-danger alert-dismissible">
+                                    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+                                    <h4><i class="icon fa fa-ban"></i> Error!</h4>
+                                    <strong>Oh snap!</strong> @TempData["ErrMsg"]
+                                </div>
+                            }
+                            @if (!String.IsNullOrEmpty(TempData["SucMsg"] + ""))
+                            {
+                                <div class="alert alert-success alert-dismissible">
+                                    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+                                    <h4><i class="icon fa fa-check"></i> Success!</h4>
+                                    <strong>Well done!</strong> @TempData["SucMsg"]
+                                </div>
+                            }
+                        </div>
+                    </div>
                     <div class="box-body">
-                        <table id="tblMaterialReceive" class="table table-bordered display">
+                        <table id="tblMaterialReceive" class="tbl table table-bordered display">
                             <thead>
                                 <tr>
                                     <th>SNo</th>
@@ -79,6 +119,16 @@
                                 }
                             </tbody>
                         </table>
+                    </div>
+                    <div class="box-footer">
+                        @*<div class="col-md-12">
+                                <div class="box-tools pull-left">
+                                    <button name="mrsubmit" id="mrsubmit" class="btn bg-aqua" title="SUBMIT"
+                                            value="submit">
+                                        SUBMIT
+                                    </button>
+                                </div>
+                            </div>*@
                     </div>
                     <!-- /.box -->
                 </div>
