--- a/Views/Admin/PORequestPayment.cshtml
+++ b/Views/Admin/PORequestPayment.cshtml
@@ -15,8 +15,8 @@
         string pageTitle = Html.Raw(Html.PageTitle()) + "";
         if (!String.IsNullOrEmpty(Model.PORequestPaymentModels.VPONumber))
         {
-            actType = "Edit";
-            actBtn = "Update";
+            actType = "Add";
+            actBtn = "Submit";
         }
     }
     <h1>
@@ -108,6 +108,20 @@
                                 </div>
                                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                                     <div class="form-group">
+                                        @Html.LabelFor(m => m.PORequestPaymentModels.Amount, new { @class = "form-control-label" }) <sup>*</sup>
+                                        @Html.TextBoxFor(m => m.PORequestPaymentModels.Amount,
+                                new
+                                {
+                                    @class = "form-control text-uppercase",
+                                    @readonly = true,
+                                    placeholder = "Enter " + @Html.DisplayNameFor(m => m.PORequestPaymentModels.Amount)
+                                })
+                                        @Html.ValidationMessageFor(m => m.PORequestPaymentModels.Amount, "",
+                                new { @class = "text-danger" })
+                                    </div>
+                                </div>
+                                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                                    <div class="form-group">
                                         @Html.LabelFor(m => m.PORequestPaymentModels.PaymentType, new { @class = "form-control-label" })
                                         @Html.DropDownListFor(m => m.PORequestPaymentModels.PaymentType,
                                        new List<SelectListItem>
@@ -181,6 +195,8 @@
                                         </div>
                                     </div>
                                 }
+                            </div>
+                            <div class="col-md-12">
                                 @if (Model.PORequestPaymentModels.PaymentType == "CREDIT" || Model.PORequestPaymentModels.PaymentType == "CREDIT+ADVANCE")
                                 {
                                     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
@@ -295,6 +311,8 @@
                                         </div>
                                     </div>
                                 }
+                            </div>
+                            <div class="col-md-12">
                                 @if (Model.PORequestPaymentModels.PaymentType != "ADVANCE")
                                 {
                                     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
