Enquiry Id wise Data remove code Material Pickup Complete

--- a/Views/Admin/MaterialReceive.cshtml
+++ b/Views/Admin/MaterialReceive.cshtml
@@ -121,14 +121,14 @@
                         </table>
                     </div>
                     <div class="box-footer">
-                        @*<div class="col-md-12">
-                                <div class="box-tools pull-left">
-                                    <button name="mrsubmit" id="mrsubmit" class="btn bg-aqua" title="SUBMIT"
-                                            value="submit">
-                                        SUBMIT
-                                    </button>
-                                </div>
-                            </div>*@
+                        <div class="col-md-12">
+                            <div class="box-tools pull-left">
+                                <button name="mrsubmit" id="mrsubmit" class="btn bg-aqua" title="SUBMIT"
+                                        value="submit">
+                                    SUBMIT
+                                </button>
+                            </div>
+                        </div>
                     </div>
                     <!-- /.box -->
                 </div>
